fix: triangle wrapping to next line

--- a/components/previous-apprentices-group/previous-apprentices-group.module.scss
+++ b/components/previous-apprentices-group/previous-apprentices-group.module.scss
@@ -16,7 +16,7 @@
   }
 
   &__apprentice {
-    width: 10rem;
+    width: 10.25rem;
 
     &:not(&:last-child) {
       padding-bottom: 0.5rem;
